[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "prepstack"
version = "0.1.0"
description = "Modular data analysis and ML workflow toolkit"
readme = "README.md"
requires-python = ">=3.9"

authors = [
  { name = "Ridhisha Tyagi" }
]

dependencies = [
  "pandas",
  "numpy",
  "scikit-learn",
  "imbalanced-learn"
]

[project.urls]
Homepage = "https://github.com/ridhisha-tyagi/prepstack"
